--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/pushy-btns.css">
     <title>Document</title>
 </head>
 <body>
+
+    <div id="main-container">
+        
+    </div>
+
+    <button class="pushy__btn pushy__btn--lg pushy__btn--blue" id="boton-borrar">Borrar</button>
+    <label for="muestrario">Color:</label>
+    <input type="color"  id="muestrario">
     
     <script src="/script.js"></script>
 </body>
