added functionality to each button  to create 8 16 32 64 divs inside main-container

--- a/index.html
+++ b/index.html
@@ -13,11 +13,42 @@
     <div id="main-container">
         
     </div>
+    <div id="botones-size">
+        <ul class="button-group">
+            <li>
+                <button id="eight" class="small button" >8
 
-    <button class="pushy__btn pushy__btn--lg pushy__btn--blue" id="boton-borrar">Borrar</button>
+                </button>
+            </li>
+            <li>
+                <button id="sixteen" class="small button" >
+                    16</button>
+            </li>
+            <li>
+                <button id="thirtyTwo" class="small button" >
+                    32
+
+                </button>
+            </li>
+            <li>
+                <button id="sixtyFour" class="small button" >
+                    64
+
+                </button>
+            </li>
+        </ul>
+    </div>
+
+    <button class="pushy__btn pushy__btn--lg pushy__btn--red" id="colorear">Colorear</button>
+
+    <button class="pushy__btn pushy__btn--lg pushy__btn--blue" id="boton-borrar-todo">Reiniciar</button>
+    <button class="pushy__btn pushy__btn--lg pushy__btn--green" id="boton-borrar">Borrador</button>
     <label for="muestrario">Color:</label>
     <input type="color"  id="muestrario">
     
+
+
+
     <script src="/script.js"></script>
 </body>
 </html>
